--- a/Eventhings/Web.config
+++ b/Eventhings/Web.config
@@ -42,9 +42,9 @@
   </system.webServer>-->
   <connectionStrings>
     
-    <!--<add name="LocalConnEventhingsDbContext" connectionString="Data Source=localhost;Initial Catalog=deveventhings;Integrated Security=False;User ID=sa;Password=Schizophrenic@0911;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>-->
+    <add name="LocalConnEventhingsDbContext" connectionString="Data Source=localhost;Initial Catalog=deveventhings;Integrated Security=False;User ID=sa;Password=Schizophrenic@0911;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>
 
-    <add name="LocalConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prod_eventiix;Integrated Security=False;User ID=eventiix_sa;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096"  providerName="System.Data.SqlClient"/>
+    <!--<add name="LocalConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prod_eventiix;Integrated Security=False;User ID=eventiix_sa;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096"  providerName="System.Data.SqlClient"/>-->
 	  
 	  <add name="MochaConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prod_eventiix;Integrated Security=False;User ID=eventiix_sa;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />
   <add name="EventhingsDbContexts" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
